# dbt-fal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cliff.toml  context.py  main.py  mutex_queue  pyproject.toml  runner.py  syntax.py  workflow.yaml
adapter/: README.md  compatible_adapters.txt  pyproject.toml
adapter/integration_tests/configs/trino/catalog/: postgresql.properties
adapter/integration_tests/features/: cloud.feature  environments.feature  python_model.feature  source.feature  sql_model.feature  teleport.feature
adapter/integration_tests/features/steps/: fal_adapter_steps.py
adapter/integration_tests/profiles/bigquery/: profiles.yml
adapter/integration_tests/profiles/duckdb/: profiles.yml
adapter/integration_tests/profiles/postgres/: profiles.yml
adapter/integration_tests/profiles/redshift/: profiles.yml
adapter/integration_tests/profiles/snowflake/: profiles.yml
adapter/integration_tests/profiles/trino/: profiles.yml
adapter/integration_tests/projects/env_project/: dbt_project.yml  fal_project.yml
adapter/integration_tests/projects/env_project/models/: model_c.py  model_e.py  schema.yml
adapter/integration_tests/projects/simple_project/: dbt_project.yml
adapter/integration_tests/projects/simple_project/models/: model_a.sql  model_b.sql  model_c.py  model_d.sql  schema.yml
adapter/integration_tests/projects/simple_project/scripts/: post_hook.py
adapter/integration_tests/projects/simple_project/utils/: get_bool.py
adapter/integration_tests/projects/source_freshness/models/: model_a.py  schema.yml
adapter/server/: Dockerfile
adapter/src/dbt/adapters/fal/: __init__.py  __version__.py  _utils.py  adapter.py  adapter_support.py  connections.py  environments.py  impl.py  teleport.py  teleport_adapter_support.py  utils.py  wrappers.py
adapter/src/dbt/adapters/fal_enc/: __init__.py  connections.py  fal_adapter_support.py  impl.py  mixins.py  wrappers.py
adapter/src/dbt/adapters/fal_experimental/: __init__.py  __version__.py  adapter.py  adapter_support.py  connections.py  impl.py  teleport.py  teleport_adapter_support.py  utils.py
adapter/src/dbt/include/fal_enc/: dbt_project.yml
adapter/src/dbt/include/fal_experimental/: dbt_project.yml
adapter/tests/: test_dbt_fal.py
adapter/tools/: Dockerfile
projects/adapter/: README.md  cliff.toml  pyproject.toml
projects/adapter/_fal/: pyproject.toml
projects/adapter/cli_tests/features/: environment.py  flow_run.feature  flow_run_middle_nodes.feature  flow_run_with_jaffle_shop.feature  ipynb_scripts.feature  main_module.feature  python_nodes.feature
projects/adapter/cli_tests/features/steps/: fal_steps.py
projects/adapter/cli_tests/profiles/broken/: profiles.yml
projects/adapter/cli_tests/profiles/fal/: profiles.yml
projects/adapter/cli_tests/profiles/redshift/: profiles.yml
projects/adapter/cli_tests/projects/000_fal_run/: dbt_project.yml
projects/adapter/cli_tests/projects/002_jaffle_shop/: dbt_project.yml  fal_dbt.py
projects/adapter/cli_tests/projects/008_pure_python_models/: dbt_project.yml
projects/adapter/cli_tests/projects/010_source_freshness/: load_freshness_table.py
projects/adapter/cli_tests/projects/011_highly_parallelizable/: dbt_project.yml
projects/adapter/cli_tests/projects/012_model_generation_error/: dbt_project.yml
projects/adapter/integration_tests/features/: cloud.feature  commands.feature  source.feature  sql_model.feature
projects/adapter/src/fal/: __init__.py
projects/adapter/src/fal/cli/: args.py
projects/adapter/tests/: _test_telemetry.py  test_cli.py  test_import.py  test_module_check.py  test_project.py  test_regressions.py  test_telemetry.py
projects/adapter/tests/_fal_testing/: utils.py
projects/adapter/tests/graph/: test_node_graph.py  test_selectors.py  utils.py
projects/adapter/tests/mock/: dbt_project.yml
projects/adapter/tests/planner/: data.py  test_plan.py  test_schedule.py  test_tasks.py  utils.py
projects/adapter/tests/runner/: test_dbt_runner.py
projects/fal/: README.md  pyproject.toml  test.py
projects/fal/integration_tests/: docker-compose.yml
projects/fal/integration_tests/features/: context_info.feature  environment.py  flow_run.feature  flow_run_middle_nodes.feature  ipynb_scripts.feature  structured_hooks.feature  write_to_model_function.feature
projects/fal/src/fal/: __init__.py  fal_script.py  node_graph.py  typing.py  utils.py
projects/fal/src/faldbt/: el_client.py  lib.py  logger.py  magics.py  parse.py  project.py  version.py
projects/fal/tests/: conftest.py  docker-compose.yml  test_cli.py  test_import.py  test_module_check.py  test_project.py  test_regressions.py  test_telemetry.py
projects/fal/tests/_fal_testing/: __init__.py  utils.py
projects/fal/tests/graph/: test_node_graph.py  test_selectors.py  utils.py
projects/fal/tests/mock/: .gitignore  dbt_project.yml
projects/fal/tests/planner/: data.py  test_plan.py  test_schedule.py  test_tasks.py  utils.py
projects/fal/tests/runner/: test_dbt_runner.py
projects/fal/tests/test_el/: test_airbyte.py  test_fivetran.py
projects/fal_serverless/: README.md  openapi_rest.config.yaml  pyproject.toml
projects/fal_serverless/openapi-fal-rest/: README.md  pyproject.toml
projects/fal_serverless/openapi-fal-rest/openapi_fal_rest/: __init__.py
projects/fal_serverless/src/fal_serverless/: __init__.py  api.py  cli.py  decorators.py  env.py  flags.py  rest_client.py  sdk.py  sync.py
projects/fal_serverless/tests/: conftest.py  integration_test.py  test_stability.py
projects/fal_serverless/tools/: demo_script.py
python_modules/fal-dagster/: README.md  pyproject.toml
python_modules/fal-dagster/example/: Dockerfile_dagster  Dockerfile_fal  dagster.yaml  docker-compose.yml  repo.py  requirements.txt  workspace.yaml
python_modules/fal-dagster/example_dbt_project/: dbt_project.yml  profiles.yml
python_modules/fal-dagster/example_dbt_project/models/: model_b.sql  schema.yml
python_modules/fal-dagster/example_dbt_project/scripts/: after2.py  before.py
python_modules/fal-dagster/fal_dagster/: __init__.py  lib.py
(+893 files in other folders)
