[tool.poetry]
name = "fal"
version = "0.1.0"
description = "fal allows you to run python scripts directly from your dbt project."
homepage = "https://github.com/fal-ai/fal"
documentation = "https://docs.fal.ai"
repository = "https://github.com/fal-ai/fal"
readme = "README.md"
authors = [ "Features & Labels <hello@fal.ai>" ]
packages = [
        { include = "fal", from = "src" },
        { include = "faldbt", from = "src" }
]

keywords = [ "dbt", "pandas" ]
classifiers = [
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = "^3.7.1, <3.10"
arrow = "^1.2.0"
pandas = "^1.3.4"
google-cloud-bigquery = "^2.28.1"
google-cloud-bigquery-storage = "^2.9.1"
pyarrow = "^5.0.0"
pydantic = "^1.8.2"
PyYAML = "^6.0"
agate-sql = "^0.5.8"
firebase-admin = "^5.1.0"
sqlalchemy-bigquery = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fal = "fal.cli:cli"
