[tool.poetry]
name = "dbt-fal"
version = "1.3.5-alpha.0"
description = "Simplest way to run dbt python models."
readme = "README.md"
homepage = "https://github.com/fal-ai/fal/adapter"
repository = "https://github.com/fal-ai/fal"
authors = [ "Features & Labels <hello@fal.ai>" ]
packages = [
    { include = "dbt", from = "src" }
]

keywords = [ "dbt", "pandas", "fal", "runtime" ]
classifiers = [
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = ">=3.7.2, <3.11"
dbt-core = ">=1.3.0b1, <1.4"
isolate = { version = "^0.4", extras = ["grpc"] }
posthog = "^1.4.5"
pandas = "^1.3.4"
"backports.functools_lru_cache" = "^1.6.4"
sqlalchemy = "^1.4.41"

# adapters
## snowflake
snowflake-connector-python = { version = "~2.7.10", extras = ["pandas"], optional = true }

## bigquery
### version defined by dbt-bigquery, installs pyarrow<8
google-cloud-bigquery = { version = ">=2,<3", extras = ["pandas"], optional = true }

## redshift
sqlalchemy-redshift = { version = "^0.8.9", optional = true }

# teleport
s3fs = { version = ">=2022.8.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
postgres = []
snowflake = ["snowflake-connector-python", "pyarrow"]
bigquery = ["google-cloud-bigquery"]
redshift = ["sqlalchemy-redshift"]
duckdb = []
athena = []
teleport = ["s3fs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
