[tool.poetry]
name = "dbt-fal"
version = "1.7.7"
# name = "fal"
# version = "0.9.4a0"
description = "Run python scripts from any dbt project."
readme = "README.md"
homepage = "https://github.com/fal-ai/fal"
repository = "https://github.com/fal-ai/fal"
authors = [ "Features & Labels <hello@fal.ai>" ]
packages = [
    { include = "dbt", from = "src" },
    # cli package
    { include = "fal", from = "src" },
    { include = "_fal_testing", from = "tests" },
]

keywords = [ "dbt", "pandas", "fal", "runtime" ]
classifiers = [
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = ">=1.5,<=1.7.7"
pandas = "^1.5.3"
posthog = "^3.3.4"
"backports.functools_lru_cache" = "^1.6.6"

# cli
PyYAML = "^6.0"
agate-sql = "^0.5.9"
astor = "^0.8.1"
deprecation = "^2.1.0"

## Environment management related dependencies
## TODO use fal-serverless instead
platformdirs = "^3.9.1"
virtualenv = "^20.24.1"
dill = "0.3.7"

# dbt-fal
sqlalchemy = "^1.4.41"

# Adapters

## snowflake
snowflake-connector-python = { version = "~=3.7.0", extras = ["pandas"], optional = true }

## bigquery
### version defined by dbt-bigquery, installs pyarrow<8
google-cloud-bigquery = { version = "~3.17.1", extras = ["pandas"], optional = true }

## redshift
awswrangler = { version = ">=3.5.2", extras = ["redshift"], optional = true, python = ">=3.11" }
sqlalchemy-redshift = { version = "^0.8.14", optional = true }

## duckdb
duckdb-engine = { version = "^0.10.0", optional = true }

## trino
trino = { version = "~0.327.0", extras = ["sqlalchemy"], optional = true }

# teleport
s3fs = { version = ">=2023.12.2", optional = true }

# fal cloud
packaging = ">=23"
fal = "^0.12.1"
importlib-metadata = "^6.11.0"

[tool.poetry.extras]
postgres = []
snowflake = ["snowflake-connector-python"]
bigquery = ["google-cloud-bigquery"]
redshift = ["awswrangler", "sqlalchemy-redshift"]
duckdb = ["duckdb-engine"]
athena = []
trino = ["trino"]
teleport = ["s3fs"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
behave = "^1.2.6"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
matplotlib = "^3.8.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-fal = "fal.dbt.cli:cli"
