[tool.poetry]
name = "fal-dagster"
version = "0.1.0"
description = "Dagster integration of fal"
authors = ["Meder Kamalov <meder@fal.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
dagster = "^0.14.17"
fal = "^0.2.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
